@@ -23,7 +23,7 @@ The following routines are defined in the {\tt \$\{EXTRAE\_HOME\}/include/extrae
   \begin{itemize}
    \item Identify loop iterations (or any code block): Given a loop, the user can set a unique type for the loop and a value related to the iterator value of the loop. For example:
     \begin{verbatim}
-     for (i = 1; i <= MAX_LOOP; i++)
+     for (i = 1; i <= MAX_ITERS; i++)
      {
        Extrae_event (1000, i);
        [original loop code]
@@ -132,11 +132,11 @@ The extended API makes use of two special structures located in {\tt \$\{PREFIX\
 \begin{verbatim}
 struct extrae_UserCommunication
 {
-  enum extrae_USER_COMMUNICATION_TYPES type;
-  unsigned tag;
-  unsigned size;
-  unsigned partner;
-  long long id;
+  extrae_user_communication_types_t type;
+  extrae_comm_tag_t tag;
+  unsigned size; /* size_t? */
+  extrae_comm_partner_t partner;
+  extrae_comm_id_t id;
 };
 \end{verbatim}
 
@@ -167,11 +167,11 @@ struct extrae_CombinedEvents
   int UserFunction;
   /* These are intended for N events */
   unsigned nEvents;
-  unsigned *Types;
-  unsigned long long *Values;
+  extrae_type_t  *Types;
+  extrae_value_t *Values;
   /* These are intended for user communication records */
   unsigned nCommunications;
-  struct extrae_UserCommunication *Communications;
+  extrae_user_communication_t *Communications;
 };
 \end{verbatim}
 
