@@ -2,6 +2,7 @@
 ChangeLog
  [ + added, - removed, * changed ]
 
+ * 23Aug2011 Updated examples and added DynInst examples to the user-guide.
  * 23Aug2011 Fixed LINUX/{SEQ,OMP} examples to use either DynInst or static
              instrumentation.
  * 23Aug2011 Fixed emitting HWC when HWC_CHANGE_EV also occurs. HWC values
